# ditto-talkinghead-improved

./: .env.example  .gitignore  .gitmodules  API_README.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  QUICKSTART.md  README.md  SETUP_UV.md  TROUBLESHOOTING.md  UV_QUICK_START.md  UV_SETUP_COMPLETE.md  UV_SETUP_SUMMARY.md  debug_online_inference.py  diagnose_pipeline_hang.py  inference.py  inference_online_example.py  inference_online_fixed.py  inference_online_verbose.py  inference_video.py  inference_video_advanced.py  inference_video_blend_control.py  inference_video_preserve_motion.py  monitor_pipeline_performance.py  profile_pipeline_stages.py  pyproject.toml  quick_bottleneck_test.py  setup_uv.sh  simple_speed_test.py  start_api.py  stream_pipeline_online.py  stream_pipeline_online_patched.py  test_all_models.py  test_api.py  test_decoder_time.py  test_pipeline_components.py  test_trt_engines.py  verify_installation.py
api/: config.py  main.py
api/middleware/: __init__.py  cors.py  logging.py
api/models/: __init__.py  requests.py  responses.py
api/routers/: __init__.py  health.py  streaming.py
api/services/: __init__.py  inference_service.py  session_manager.py
core/atomic_components/: putback_configurable.py  writer.py
core/utils/: logging_config.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioUpload.tsx  ConfigPanel.tsx  FileUpload.tsx  StatusBar.tsx  VideoDisplay.tsx
frontend/src/services/: websocketClient.ts
frontend/src/types/: index.ts
frontend/src/utils/: imageUtils.ts
personal_docs/: BLENDING_CONTROL_GUIDE.md  CODE_EXAMPLES.md  INFERENCE_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  VIDEO_INFERENCE_GUIDE.md  WHATS_NEW.md
